2012-10-12  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r131224.
        http://trac.webkit.org/changeset/131224
        https://bugs.webkit.org/show_bug.cgi?id=99210

        It broke the build (Requested by andersca on #webkit).

        * wtf/Vector.h:
        (WTF):
        (WTF::operator<<):
        (WTF::operator>>):
        * wtf/qt/StringQt.cpp:
        (WTF::operator<<):
        (WTF):
        (WTF::operator>>):
        * wtf/text/WTFString.h:
        (WTF):

2012-10-12  Anders Carlsson  <andersca@apple.com>

        Move QDataStream functions into HistoryItemQt.cpp
        https://bugs.webkit.org/show_bug.cgi?id=99203

        Reviewed by Andreas Kling.

        It seems like the QDataStream stream operators are only used from HistoryItemQt.cpp
        inside WebCore, so move them there. If in the future they are required elsewhere, they should
        be moved into a separate header instead of polluting headers unnecessarily.

        * wtf/Vector.h:
        * wtf/qt/StringQt.cpp:
        * wtf/text/WTFString.h:

2012-10-11  Mark Toller  <mark.toller@samsung.com>

        Removed incorrect pthread_mutex_trylock code in an ASSERT in TCMalloc_PageHeap::signalScavenger. This 
        branch is used by the Webkit GTK code.

        https://bugs.webkit.org/show_bug.cgi?id=97539

        Reviewed by Geoffrey Garen.

        The code was never compiled in, and was functionally broken. There is no need for locking around the 
        m_scavengeThreadActive flag, however, we should lock pageheap_lock before calling 'shouldScavenge()', as we
        only want to scavenge when really required, so it's better to wait for any current memory operation to 
        complete before checking. 

        * wtf/FastMalloc.cpp:
        (WTF::TCMalloc_PageHeap::signalScavenger):

2012-10-10  Yong Li  <yoli@rim.com>

        [BlackBerry] Define WTF_USE_EXTRA_MACROS in cmake rather than Platform.h