@@ -83,7 +83,10 @@ public:
             return;
         }
 
-        append(other.characters(), other.m_length);
+        if (other.is8Bit())
+            append(other.characters8(), other.m_length);
+        else
+            append(other.characters16(), other.m_length);
     }
 
     void append(const String& string, unsigned offset, unsigned length)
