@@ -1,3 +1,15 @@
+2012-10-12  Michael Saboff  <msaboff@apple.com>
+
+        StringBuilder::append(StringBuilder&) doesn't take into account the bit size of the argument string
+        https://bugs.webkit.org/show_bug.cgi?id=99225
+
+        Reviewed by Benjamin Poulain.
+
+        Added 8 bit path.
+
+        * wtf/text/StringBuilder.h:
+        (WTF::StringBuilder::append):
+
 2012-10-12  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r131224.
